Make navlinks clickable - Pseudo-select uses <a> tags for the html. Had a e.preventDefault that was conflicting. - Also minor change to Carrier Dashboard. Flex made content look off center.

--- a/app/assets/stylesheets/components/_dashboard.scss
+++ b/app/assets/stylesheets/components/_dashboard.scss
@@ -1,3 +1,7 @@
+#carrierDashboard {
+  align-items: center;
+}
+
 .dashboardHeader {
   align-items: flex-start;
   display: flex;
